# ros_delta_robot

./: README.md
delta_documentation/: Readme.md
delta_documentation/Scilab_resources/: PlotFunction.sce  Readme.md  deltaOptimization.sce  inverseDelta.sce  trajectoria.sce  trajectoriaV2.sce  workSpaceValidation.sce
delta_documentation/wxMax_eqs/: Eqs_estat.html
delta_documentation/wxMax_eqs/Eqs_estat_htmlimg/: Eqs_estat.css
delta_mechanical/: Readme.txt  base.stp  biceps.stp  mountingbracket.stp  unio.stp
delta_robot_drivers/: CMakeLists.txt  package.xml
delta_robot_drivers/include/delta_robot_drivers/: delta_angles_streamer.h  delta_hw_driver.h
delta_robot_drivers/src/: delta_angles_streamer.cpp  delta_angles_streamer_node.cpp  delta_hw_driver.cpp
delta_robot_firmware/: CMakeLists.txt  README.md  package.xml
delta_robot_firmware/src/: CMakeLists.txt  firmware.cpp
delta_robot_img_processor/: CMakeLists.txt  README.md  package.xml
delta_robot_img_processor/include/delta_robot_img_processor/: camera.h  circle_detector.h  ros_img_processor.h
delta_robot_img_processor/launch/: delta_robot_img_processor.launch
delta_robot_img_processor/src/: delta_img_processor_node.cpp  ros_img_processor.cpp
delta_robot_kinematics/: CMakeLists.txt  package.xml
delta_robot_kinematics/include/delta_robot_kinematics/: delta_kinematics.h
delta_robot_kinematics/src/: delta_kinematics.cpp
delta_robot_support/: CMakeLists.txt  package.xml
delta_robot_support/config/: controllers.yaml  delta.rviz
delta_robot_support/firmware/: CMakeLists.txt  arduino_punk.cpp
delta_robot_support/launch/: delta_robot_real.launch  delta_robot_sim.launch
delta_robot_support/urdf/: delta_robot.urdf
delta_robot_support/urdf/meshes/: Platform.STL  fixed_base2.dae  upper_leg.STL
