<?xml version="1.0"?>
<package>
  <name>delta_robot_support</name>
  <version>0.0.0</version>
  <description>The delta_robot_support package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sebastian.serra@uvic.cat">Sebastián Serra Landete</maintainer>
  <maintainer email="jose.fernandez@uvic.cat">José Fernández Mola</maintainer>
  <maintainer email="david.vives@uvic.cat">David Vives Colom</maintainer>
  <maintainer email="gabriel.felez@uvic.cat">Gabriel Felez Palacios</maintainer>
  <maintainer email="sergi.fabrego@uvic.cat">Sergi Fabrego i Serrat</maintainer>
  <maintainer email="xavier.ortizquintana@uvic.cat">Xavier Ortiz-Quintana Escardivol</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <url type="website"></url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="sebastian.serra@uvic.cat">Sebastián Serra Landete</author>
  <author email="jose.fernandez@uvic.cat">José Fernández Mola</author>
  <author email="david.vives@uvic.cat">David Vives Colom</author>
  <author email="gabriel.felez@uvic.cat">Gabriel Felez Palacios</author>
  <author email="sergi.fabrego@uvic.cat">Sergi Fabrego i Serrat</author>
  <author email="xavier.ortizquintana@uvic.cat">Xavier Ortiz-Quintana Escardivol</author>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
